Fix homepage overflowing on mobile

--- a/assets/scss/organisms/homepage/_trusted-partnerships.scss
+++ b/assets/scss/organisms/homepage/_trusted-partnerships.scss
@@ -1,4 +1,5 @@
 .trusted-partnerships {
+    overflow: hidden;
     padding-bottom: 240px;
     background-color: $white;
 
