--- a/assets/scss/rtl/organisms/hero/_homepage-hero.scss
+++ b/assets/scss/rtl/organisms/hero/_homepage-hero.scss
@@ -1,4 +1,6 @@
 .homepage-hero {
+    overflow: hidden;
+
     .text-box {
         left: auto;
         right: 125px;
